# sledgehammer

./: .gitignore  Cargo.toml  LICENCE  README.md  index.html  interpreter.js  interpreter_opt.js
encoder/: Cargo.toml
encoder/src/: attribute.rs  batch.rs  element.rs  lib.rs
examples/: bench.rs  string_caching_benchmark.rs  web_sys_comparison.rs
prebuild/: Cargo.toml
prebuild/examples/: macro.rs
prebuild/src/: lib.rs
src/: attribute.rs  attrs.rs  batch.rs  builder.rs  channel.rs  element.rs  event.rs  lib.rs  main.rs  value.rs
src/renderer/html_handlebars/helpers/: navigation.rs
web/: Cargo.toml  interpreter_manually_opt.js  interpreter_opt.js
web/src/: channel.rs  lib.rs
