[package]
name = "sledgehammer"
version = "0.0.1"
authors = ["Evan Almloff <ealmlof1@stumail.jccc.edu>"]
edition = "2021"
description = "Fast bindings for dom manipulations"
documentation = "https://docs.rs/sledgehammer"
readme = "README.md"
repository = "https://github.com/demonthos/sledgehammer/"
license = "MIT"
keywords = ["web", "wasm", "dom"]
categories = ["web-programming", "wasm", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["console", "Window", "Document", "Element", "HtmlElement", "HtmlHeadElement"] }
js-sys = "0.3.60"
