[package]
name = "sledgehammer"
version = "0.1.0"
authors = ["Evan Almloff <ealmlof1@stumail.jccc.edu>"]
edition = "2021"
description = "Fast bindings for dom manipulations"
documentation = "https://docs.rs/sledgehammer"
readme = "README.md"
repository = "https://github.com/demonthos/sledgehammer/"
license = "MIT"
keywords = ["web", "wasm", "dom"]
categories = ["web-programming", "wasm", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["console", "Window", "Document", "Element", "HtmlElement", "HtmlHeadElement", "Performance"] }
js-sys = "0.3.60"
ufmt = "0.2.0"
# much faster non-cypographic hash function for strings
farmhash = "1.1.5"
lru = "0.8.1"
once_cell = "1.8.0"