[package]
name = "sledgehammer-prebuild"
version = "0.2.0"
authors = ["Evan Almloff <ealmlof1@stumail.jccc.edu>"]
edition = "2021"
description = "Prebuild messages for Sledgehammer"
documentation = "https://docs.rs/sledgehammer"
readme = "README.md"
repository = "https://github.com/demonthos/sledgehammer/"
license = "MIT"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.102"
syn-rsx = "0.9.0"
sledgehammer-encoder = { path = "../encoder" }
bumpalo = "3.11.1"